<?xml version="1.0" encoding="utf-8"?>
<!--Side drawer menu item-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_Score_Board"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/score_board" />
        <item
            android:id="@+id/nav_Profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_Change_Password"
            android:icon="@drawable/ic_profile"
            android:title="@string/change_password" />
        <item
            android:id="@+id/nav_Logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout" />


    </group>


</menu>
